--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,8 +63,8 @@ body {
 
 .prod-container {
   text-align: center;
-  margin: 0 5%;
-  color: #ffe4c4; }
+  color: #ffe4c4;
+  margin: 0 5%; }
 
 .prod-container-nosotros {
   text-align: center;
